# rustoku

./: .gitignore  Cargo.toml  LICENSE  README.md  criterion.toml  index.html  rustfmt.toml
benches/: basicfishes.rs  bruteb.rs  finnedfishes.rs  hiddentups.rs  humanb.rs  nakedtups.rs  pointingclaiming.rs  singlecand.rs  sudoku_bench.rs  utils.rs
examples/: badinput.rs  brute.rs  hint.rs  human.rs
src/: brute.rs  errors.rs  hint.rs  lib.rs  move_change.rs  report.rs  solution.rs  sudokusize.rs
src/bitset/: bit.rs  bitset.rs  bitsetiter.rs  mod.rs  traits.rs
src/grid/: grid.rs  grid_iterators.rs  grid_traits.rs  gridcoord.rs  house.rs  mod.rs  types.rs
src/human_calcs/: guess.rs  mod.rs  technique.rs  tuple_ctr.rs
src/human_calcs/basic/: candidates.rs  claiming.rs  mod.rs  pointing.rs  single_cand.rs  single_poss.rs
src/human_calcs/fish/: basicfish.rs  finned.rs  fishtuple.rs  mod.rs
src/human_calcs/humansolve/: mod.rs  solver.rs  tech_index.rs
src/human_calcs/tuples/: hidden_tup.rs  mod.rs  naked_tup.rs
src/square/: mod.rs  possibilities.rs  square.rs
src/sudoku/: initial_input.rs  mod.rs  output.rs  setinputs.rs  sudoku.rs
tests/: integration.rs  setup.rs
