[package]
name = "rustoku"
version = "0.1.0"
description = "Sudoku solver using human and brute force technques, along with a framework for playable app building and free of dependencies"
authors = ["Timothy Reed <thetimmyreed@gmail.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/timlikestacos/rustoku.git"
license = "MIT"
keywords = ["sudoku, rustoku, brute_force, human, puzzle, game"]
publish = false

[dependencies]
#None

[dev-dependencies]
rayon = "1.6.1"
criterion = "0.4.0"